--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,23 @@
+:root {
+    font-size: 62.5%;
+}
+
 *{
     margin: 0;
-    font-size: 62.5%;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     font-style: normal;
 }
 
+.active {
+    color: tomato;
+}
+
 body{
-    font-size: 12rem;
+    font-size: 2.5rem;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
@@ -15,17 +25,23 @@ main {
 }
 
 nav{
+    font-size: 3rem;
     margin-top: 8px;
     margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-h2 {
-    font-size: 3.5rem;
+nav a {
+    margin-right: 15px;
+  }
+  
+nav a:last-child {
+    margin-right: 0;
 }
 
 header {
-    margin-top: 40px;
-    padding: 0 50px;
+    padding: 40px 50px 0;
 }
 
 #about img {
@@ -39,7 +55,7 @@ a{
 }
 
 a:hover {
-    color: orange;
+    color: tomato;
 }
 
 .name {
@@ -47,12 +63,7 @@ a:hover {
     margin-top: 25px;
 }
 
-ul {
-    font-size: 4.5rem;
-}
-
 table {
-    font-size: 11rem;
     border-collapse: collapse;
     margin-bottom: 30px;
     text-align: center;
@@ -73,6 +84,38 @@ th, td {
 footer {
     background-color: black;
     color: white;
-    padding: 50px 0 50px 50px;
-    font-size: 5rem;
+    padding: 30px 50px;
+    margin-top: auto;
+}
+
+@media screen and (max-width: 800px ) {
+    #about img {
+        width: 500px;
+    }
+    nav {
+      justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 600px ) {
+    h1 {
+      text-align: center;
+    }
+    nav {
+      flex-direction: column;
+      align-items: center;
+      font-size: calc(3rem + 4px);
+    }
+    #about img {
+        width: 100%;
+    }
+    table {
+        font-size: calc(2.5rem - 2px);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    table{
+        font-size: calc(2.5rem / 1.85);
+    }
 }
