--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,7 @@ footer {
         width: 100%;
     }
     table {
-        font-size: calc(2.5rem - 2px);
+        font-size: calc(2.5rem / 1.5);
     }
 }
 
