--- a/styles/make_lunch.css
+++ b/styles/make_lunch.css
@@ -57,7 +57,8 @@ main {
 .dish {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 10px;
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 1.5rem;
   margin: 4rem 0;
 }
 
@@ -126,13 +127,15 @@ footer {
 
 .block_create_order {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
   font-size: 2.3rem;
   margin-top: 4rem;
+  width: 70%;
 }
 
 .order_and_data {
   font-size: 2.7rem;
+  margin-bottom: 2rem;
 }
 
 .info {
@@ -151,13 +154,17 @@ label p {
 
 input, select {
   font-size: 2.1rem;
-  width: 80%;
+  width: 75%;
   height: 5rem;
+}
+
+.comments {
+  margin-top: 5rem;
 }
 
 textarea {
   font-size: 2.1rem;
-  width: 80%;
+  width: 75%;
   height: 12rem;
 }
 
@@ -193,9 +200,32 @@ em {
 
 .order_buttons {
   display: flex;
-  width: 80%;
+  width: 75%;
   justify-content: space-between;
   margin-top: 2rem;
+}
+
+.filter_button {
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  border: 0;
+  font-size: 2.5rem;
+  margin-top: 0.4rem;
+  background-color: white;
+  color: green;
+}
+
+.active_button {
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  border: 0;
+  font-size: 2.5rem;
+  margin-top: 0.4rem;
+  background-color: rgb(184, 239, 184);
+  color: green;
+
 }
 
 @media screen and (max-width: 800px ) {
