--- a/styles/make_lunch.css
+++ b/styles/make_lunch.css
@@ -101,7 +101,7 @@ img {
   margin-top: auto;
 }
 
-button {
+.add_dish {
   background-color: #f1eee9;
   padding: 10px 30px;
   border-radius: 10px;
@@ -225,7 +225,67 @@ em {
   margin-top: 0.4rem;
   background-color: rgb(184, 239, 184);
   color: green;
+}
 
+.options {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 5rem;
+  grid-row-gap: 4rem;
+  padding: 5rem 0;
+  font-size: 2rem;
+}
+
+.options_title {
+  text-align: center;
+}
+
+.lunch_options {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.lunch_dish {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lunch_dish img {
+  width: 7rem;
+  border-radius: 0;
+}
+
+.lunch_dish img:hover {
+  transform: translateY(-0.9rem) scale(1.2);
+}
+
+.lunch_dish_text {
+  font-size: 1.8rem;
+}
+
+#notific {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  border: black 1px solid;
+  padding: 5rem 10rem;
+  background-color: white;
+}
+
+#notific_button {
+  background-color: white;
+  border: black 1 px solid;
+  margin-top: 3rem;
+  padding: 0.7rem 3rem;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 2.5rem;
 }
 
 @media screen and (max-width: 800px ) {
